--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "mumps-debug",
 	"displayName": "Mumps Debugger",
-	"version": "0.1.8",
+	"version": "0.1.9",
 	"publisher": "jewuma",
 	"description": "Debugger for Mumps (M) , GT.M, YottaDB",
 	"author": {
@@ -16,7 +16,7 @@
 		"debug"
 	],
 	"engines": {
-		"vscode": "^1.41.1"
+		"vscode": "^1.43.0"
 	},
 	"icon": "images/mumps-debug-icon.png",
 	"categories": [
@@ -31,33 +31,31 @@
 		"url": "https://github.com/jewuma/mumps-debug/issues"
 	},
 	"scripts": {
-		"prepublish": "tsc -p ./src",
+		"prepare": "tsc -p ./src",
 		"compile": "tsc -p ./src",
 		"tslint": "tslint ./src/**/*.ts",
 		"watch": "tsc -w -p ./src",
-		"postinstall": "node ./node_modules/vscode/bin/install",
 		"package": "vsce package",
 		"publish": "vsce publish",
-		"vscode:prepublish": "webpack --mode production",
-    "webpack": "webpack --mode development",
-    "webpack-dev": "webpack --mode development --watch"
+		"vscode:prepare": "webpack --mode production",
+		"webpack": "webpack --mode development",
+		"webpack-dev": "webpack --mode development --watch"
 	},
 	"dependencies": {
 		"await-notify": "1.0.1",
 		"vscode-debugadapter": "1.38.0-pre.4"
 	},
 	"devDependencies": {
+		"@types/vscode": "^1.43.0",
 		"@types/node": "^13.9.3",
 		"ts-loader": "^6.2.2",
 		"tslint": "5.18.0",
 		"typescript": "3.5.3",
 		"vsce": "1.66.0",
-		"vscode": "1.1.36",
-		"vscode-debugadapter-testsupport": "1.37.0",
 		"webpack": "^4.42.0",
 		"webpack-cli": "^3.3.11"
 	},
-	"main": "./dist/extension",
+	"main": "./out/extension",
 	"activationEvents": [
 		"onDebug"
 	],
