--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "mumps-debug",
 	"displayName": "Mumps Debugger",
-	"version": "0.1.9",
+	"version": "0.2.0",
 	"publisher": "jewuma",
 	"description": "Debugger for Mumps (M) , GT.M, YottaDB",
 	"author": {
@@ -51,11 +51,11 @@
 		"ts-loader": "^6.2.2",
 		"tslint": "5.18.0",
 		"typescript": "3.5.3",
-		"vsce": "1.66.0",
+		"vsce": "^1.74.0",
 		"webpack": "^4.42.0",
 		"webpack-cli": "^3.3.11"
 	},
-	"main": "./out/extension",
+	"main": "./dist/extension",
 	"activationEvents": [
 		"onDebug"
 	],
