--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 	},
 	"icon": "images/mumps-debug-icon.png",
 	"categories": [
-		"Debuggers"
+		"Debuggers",
+		"Programming Languages",
+    "Formatters"
 	],
 	"private": true,
 	"repository": {
@@ -53,67 +55,134 @@
 		"typescript": "3.5.3",
 		"vsce": "^1.75.0",
 		"webpack": "^4.42.1",
+		"emcellent": "0.0.5",
 		"webpack-cli": "^3.3.11"
 	},
-	"main": "./dist/extension",
+	"main": "./out/extension",
 	"activationEvents": [
 		"onLanguage:mumps",
 		"onDebug"
 	],
 	"contributes": {
-		"breakpoints": [
+		"themes": [
 			{
-				"language": "mumps"
+					"label": "Mumps-Syntax-Higlight",
+					"uiTheme": "vs-dark",
+					"path": "./syntaxes/mumps.tmTheme"
 			}
 		],
-		"debuggers": [
-			{
-				"type": "mumps",
-				"label": "Mumps Debugger",
-				"program": "./dist/extension",
-				"runtime": "node",
-				"configurationAttributes": {
-					"launch": {
-						"required": [
-							"program",
-							"hostname",
-							"localRoutinesPath"
-						],
-						"properties": {
-							"program": {
-								"type": "string",
-								"description": "Absolute path to a text file.",
-								"default": "${workspaceFolder}/${command:AskForProgramName}"
-							},
-							"stopOnEntry": {
-								"type": "boolean",
-								"description": "Automatically stop after launch.",
-								"default": true
-							},
-							"trace": {
-								"type": "boolean",
-								"description": "Enable logging of the Debug Adapter Protocol.",
-								"default": true
-							},
-							"hostname": {
-								"type": "string",
-								"description": "The Host which runs MDEBUG",
-								"default": "localhost"
-							},
-							"localRoutinesPath": {
-								"type": "string",
-								"description": "The Path to map .m Files to local Files"
-							},
-							"port": {
-								"type": "number",
-								"description": "The Communication-Port to MDEBUG",
-								"default": 9000
-							}
+		"variables": {
+			"AskForProgramName": "extension.mumps-debug.getProgramName"
+		},
+		"languages": [
+      {
+        "id": "mumps",
+        "aliases": [
+          "MUMPS",
+          "mumps"
+        ],
+        "extensions": [
+          ".int",
+          ".m",
+          ".mps",
+          ".zwr"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+		],
+    "grammars": [
+      {
+        "language": "mumps",
+        "scopeName": "source.mumps",
+        "path": "./syntaxes/mumps.tmLanguage"
+      }
+    ],
+    "keybindings": [
+      {
+        "command": "mumps.documentFunction",
+        "key": "ctrl+d",
+        "when": "editorLangId == mumps"
+      },
+      {
+        "command": "mumps.autoSpaceEnter",
+        "when": "editorLangId == mumps",
+        "key": "enter"
+      },
+      {
+        "command": "mumps.autoSpaceTab",
+        "when": "editorLangId == mumps && !suggestWidgetVisible",
+        "key": "tab"
+      }
+    ],
+    "configurationDefaults": {
+      "[mumps]": {
+        "editor.insertSpaces": false,
+        "editor.formatOnSave": true
+      }
+    },
+		"breakpoints": [{
+			"language": "mumps"
+		}],
+		"debuggers": [{
+			"type": "mumps",
+			"label": "Mumps Debugger",
+			"program": "./out/extension",
+			"runtime": "node",
+			"languages": ["mumps"],
+			"configurationAttributes": {
+				"launch": {
+					"required": [
+						"program",
+						"hostname",
+						"localRoutinesPath"
+					],
+					"properties": {
+						"program": {
+							"type": "string",
+							"description": "Absolute path to a text file.",
+							"default": "${workspaceFolder}/${command:mumps.getEntryRef}"
+						},
+						"stopOnEntry": {
+							"type": "boolean",
+							"description": "Automatically stop after launch.",
+							"default": true
+						},
+						"trace": {
+							"type": "boolean",
+							"description": "Enable logging of the Debug Adapter Protocol.",
+							"default": true
+						},
+						"hostname": {
+							"type": "string",
+							"description": "The Host which runs MDEBUG",
+							"default": "localhost"
+						},
+						"localRoutinesPath": {
+							"type": "string",
+							"description": "The Path to map .m Files to local Files"
+						},
+						"port": {
+							"type": "number",
+							"description": "The Communication-Port to MDEBUG",
+							"default": 9000
 						}
 					}
-				},
-				"initialConfigurations": [
-					{
+				}
+			},
+			"initialConfigurations": [{
+				"type": "mumps",
+				"request": "launch",
+				"name": "Active File",
+				"program": "${file}",
+				"hostname": "localhost",
+				"port": 9000,
+				"localRoutinesPath": "y:\\",
+				"stopOnEntry": true
+			}],
+			"configurationSnippets": [{
+					"label": "Mumps Debug: Launch",
+					"description": "Launch and debug active File",
+					"body": {
 						"type": "mumps",
 						"request": "launch",
 						"name": "Active File",
@@ -123,27 +192,19 @@
 						"localRoutinesPath": "y:\\",
 						"stopOnEntry": true
 					}
-				],
-				"configurationSnippets": [
-					{
-						"label": "Mumps Debug: Launch",
-						"description": "Launch and debug active File",
-						"body": {
-							"type": "mumps",
-							"request": "launch",
-							"name": "Active File",
-							"program": "${file}",
-							"hostname": "localhost",
-							"port": 9000,
-							"localRoutinesPath": "y:\\",
-							"stopOnEntry": true
-						}
+				},
+				{
+					"label": "Mumps Debug: Launch",
+					"description": "Start at individual Entry-Ref.",
+					"body": {
+						"type": "mumps",
+						"request": "launch",
+						"name": "Ask for Entryref",
+						"program": "${command:AskForProgramName}",
+						"stopOnEntry": true
 					}
-				],
-				"variables": {
-					"AskForProgramName": "extension.mumps-debug.getProgramName"
 				}
-			}
-		]
+			]
+		}]
 	}
 }
