--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "mumps-debug",
 	"displayName": "Mumps Language-Pack",
-	"version": "0.5.0",
+	"version": "0.5.1",
 	"publisher": "jewuma",
 	"description": "Debugger for Mumps (M) , GT.M, YottaDB",
 	"author": {
@@ -22,7 +22,7 @@
 	"categories": [
 		"Debuggers",
 		"Programming Languages",
-    "Formatters"
+		"Formatters"
 	],
 	"private": true,
 	"repository": {
@@ -50,12 +50,12 @@
 	"devDependencies": {
 		"@types/node": "^13.11.0",
 		"@types/vscode": "^1.43.0",
+		"emcellent": "0.0.5",
 		"ts-loader": "^6.2.2",
 		"tslint": "5.18.0",
 		"typescript": "3.5.3",
 		"vsce": "^1.75.0",
 		"webpack": "^4.42.1",
-		"emcellent": "0.0.5",
 		"webpack-cli": "^3.3.11"
 	},
 	"main": "./dist/extension",
@@ -64,66 +64,57 @@
 		"onDebug"
 	],
 	"contributes": {
-		"debuggers": [{
-			"type": "mumps",
-			"label": "Mumps Debugger",
-			"program": "./dist/extension",
-			"runtime": "node",
-			"languages": ["mumps"],
-			"configurationAttributes": {
-				"launch": {
-					"required": [
-						"program",
-						"hostname",
-						"localRoutinesPath"
-					],
-					"properties": {
-						"program": {
-							"type": "string",
-							"description": "Absolute path to a text file.",
-							"default": "${workspaceFolder}/${command:mumps.getEntryRef}"
-						},
-						"stopOnEntry": {
-							"type": "boolean",
-							"description": "Automatically stop after launch.",
-							"default": true
-						},
-						"trace": {
-							"type": "boolean",
-							"description": "Enable logging of the Debug Adapter Protocol.",
-							"default": true
-						},
-						"hostname": {
-							"type": "string",
-							"description": "The Host which runs MDEBUG",
-							"default": "localhost"
-						},
-						"localRoutinesPath": {
-							"type": "string",
-							"description": "The Path to map .m Files to local Files"
-						},
-						"port": {
-							"type": "number",
-							"description": "The Communication-Port to MDEBUG",
-							"default": 9000
+		"debuggers": [
+			{
+				"type": "mumps",
+				"label": "Mumps Debugger",
+				"program": "./dist/extension",
+				"runtime": "node",
+				"languages": [
+					"mumps"
+				],
+				"configurationAttributes": {
+					"launch": {
+						"required": [
+							"program",
+							"hostname",
+							"localRoutinesPath"
+						],
+						"properties": {
+							"program": {
+								"type": "string",
+								"description": "Absolute path to a text file.",
+								"default": "${workspaceFolder}/${command:mumps.getEntryRef}"
+							},
+							"stopOnEntry": {
+								"type": "boolean",
+								"description": "Automatically stop after launch.",
+								"default": true
+							},
+							"trace": {
+								"type": "boolean",
+								"description": "Enable logging of the Debug Adapter Protocol.",
+								"default": true
+							},
+							"hostname": {
+								"type": "string",
+								"description": "The Host which runs MDEBUG",
+								"default": "localhost"
+							},
+							"localRoutinesPath": {
+								"type": "string",
+								"description": "The Path to map .m Files to local Files"
+							},
+							"port": {
+								"type": "number",
+								"description": "The Communication-Port to MDEBUG",
+								"default": 9000
+							}
 						}
 					}
-				}
-			},
-			"initialConfigurations": [{
-				"type": "mumps",
-				"request": "launch",
-				"name": "Active File",
-				"program": "${file}",
-				"hostname": "localhost",
-				"port": 9000,
-				"localRoutinesPath": "y:\\",
-				"stopOnEntry": true
-			}],
-			"configurationSnippets": [{
-					"label": "Mumps Debug: Launch",
-					"description": "Launch and debug active File",
-					"body": {
+				},
+				"initialConfigurations": [
+					{
 						"type": "mumps",
 						"request": "launch",
 						"name": "Active File",
@@ -133,71 +124,89 @@
 						"localRoutinesPath": "y:\\",
 						"stopOnEntry": true
 					}
-				},
-				{
-					"label": "Mumps Debug: Launch",
-					"description": "Start at individual Entry-Ref.",
-					"body": {
-						"type": "mumps",
-						"request": "launch",
-						"name": "Ask for Entryref",
-						"program": "${command:AskForProgramName}",
-						"stopOnEntry": true
+				],
+				"configurationSnippets": [
+					{
+						"label": "Mumps Debug: Launch",
+						"description": "Launch and debug active File",
+						"body": {
+							"type": "mumps",
+							"request": "launch",
+							"name": "Active File",
+							"program": "${file}",
+							"hostname": "localhost",
+							"port": 9000,
+							"localRoutinesPath": "y:\\",
+							"stopOnEntry": true
+						}
+					},
+					{
+						"label": "Mumps Debug: Launch",
+						"description": "Start at individual Entry-Ref.",
+						"body": {
+							"type": "mumps",
+							"request": "launch",
+							"name": "Ask for Entryref",
+							"program": "${command:AskForProgramName}",
+							"stopOnEntry": true
+						}
 					}
-				}
-			]
-		}],
+				]
+			}
+		],
 		"variables": {
 			"AskForProgramName": "extension.mumps-debug.getProgramName"
 		},
 		"languages": [
-      {
-        "id": "mumps",
-        "aliases": [
-          "MUMPS",
-          "mumps"
-        ],
-        "extensions": [
-          ".int",
-          ".m",
-          ".mps",
-          ".zwr"
-        ],
-        "configuration": "./language-configuration.json"
-      }
+			{
+				"id": "mumps",
+				"aliases": [
+					"MUMPS",
+					"mumps"
+				],
+				"extensions": [
+					".int",
+					".m",
+					".mps",
+					".zwr"
+				],
+				"configuration": "./language-configuration.json"
+			}
 		],
-    "grammars": [
-      {
-        "language": "mumps",
-        "scopeName": "source.mumps",
-        "path": "./syntaxes/mumps.tmLanguage"
-      }
-    ],
-    "keybindings": [
-      {
-        "command": "mumps.documentFunction",
-        "key": "ctrl+d",
-        "when": "editorLangId == mumps"
-      },
-      {
-        "command": "mumps.autoSpaceEnter",
-        "when": "editorLangId == mumps",
-        "key": "enter"
-      },
-      {
-        "command": "mumps.autoSpaceTab",
-        "when": "editorLangId == mumps && !suggestWidgetVisible",
-        "key": "tab"
-      }
-    ],
-    "configurationDefaults": {
-      "[mumps]": {
-        "editor.insertSpaces": false,
-        "editor.formatOnSave": true
-      }
-    },
-		"breakpoints": [{
-			"language": "mumps"
-		}]
+		"grammars": [
+			{
+				"language": "mumps",
+				"scopeName": "source.mumps",
+				"path": "./syntaxes/mumps.tmLanguage"
+			}
+		],
+		"keybindings": [
+			{
+				"command": "mumps.documentFunction",
+				"key": "ctrl+d",
+				"when": "editorLangId == mumps"
+			},
+			{
+				"command": "mumps.autoSpaceEnter",
+				"when": "editorLangId == mumps",
+				"key": "enter"
+			},
+			{
+				"command": "mumps.autoSpaceTab",
+				"when": "editorLangId == mumps && !suggestWidgetVisible",
+				"key": "tab"
+			}
+		],
+		"configurationDefaults": {
+			"[mumps]": {
+				"editor.insertSpaces": false,
+				"editor.formatOnSave": true
+			}
+		},
+		"breakpoints": [
+			{
+				"language": "mumps"
+			}
+		]
 	}
 }
