--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "mumps-debug",
 	"displayName": "Mumps Language-Pack",
-	"version": "0.6.0",
+	"version": "0.6.3",
 	"publisher": "jewuma",
 	"description": "Debugger for Mumps (M) , GT.M, YottaDB",
 	"author": {
@@ -16,7 +16,7 @@
 		"debug"
 	],
 	"engines": {
-		"vscode": "^1.43.0"
+		"vscode": "^1.47.0"
 	},
 	"icon": "images/mumps-debug-icon.png",
 	"categories": [
@@ -37,7 +37,7 @@
 		"compile": "tsc -p ./src",
 		"tslint": "tslint ./src/**/*.ts",
 		"watch": "tsc -w -p ./src",
-		"package": "vsce package",
+		"package": "webpack --mode production && vsce package",
 		"publish": "vsce publish",
 		"vscode:prepare": "webpack --mode production",
 		"webpack": "webpack --mode development",
@@ -48,20 +48,19 @@
 		"vscode-debugadapter": "1.38.0-pre.4"
 	},
 	"devDependencies": {
-		"@types/node": "^13.11.0",
-		"@types/vscode": "^1.43.0",
+		"@types/node": "^13.13.15",
+		"@types/vscode": "^1.47.0",
 		"emcellent": "0.0.5",
 		"ts-loader": "^6.2.2",
 		"tslint": "5.18.0",
 		"typescript": "3.5.3",
-		"vsce": "^1.75.0",
-		"webpack": "^4.42.1",
-		"webpack-cli": "^3.3.11"
+		"vsce": "^1.77.0",
+		"webpack": "^4.44.1",
+		"webpack-cli": "^3.3.12"
 	},
 	"main": "./dist/extension",
 	"activationEvents": [
-		"onLanguage:mumps",
-		"onDebug"
+		"onLanguage:mumps"
 	],
 	"contributes": {
 		"debuggers": [
