--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "mumps-debug",
 	"displayName": "Mumps Language-Pack",
-	"version": "0.6.3",
+	"version": "0.7.0",
 	"publisher": "jewuma",
 	"description": "Debugger for Mumps (M) , GT.M, YottaDB",
 	"author": {
@@ -16,7 +16,7 @@
 		"debug"
 	],
 	"engines": {
-		"vscode": "^1.47.0"
+		"vscode": "^1.48.2"
 	},
 	"icon": "images/mumps-debug-icon.png",
 	"categories": [
@@ -49,12 +49,12 @@
 	},
 	"devDependencies": {
 		"@types/node": "^13.13.15",
-		"@types/vscode": "^1.47.0",
+		"@types/vscode": "^1.48.0",
 		"emcellent": "0.0.5",
 		"ts-loader": "^6.2.2",
 		"tslint": "5.18.0",
 		"typescript": "3.5.3",
-		"vsce": "^1.77.0",
+		"vsce": "^1.79.3",
 		"webpack": "^4.44.1",
 		"webpack-cli": "^3.3.12"
 	},
@@ -205,6 +205,49 @@
 		"breakpoints": [
 			{
 				"language": "mumps"
+			}
+		],
+		"semanticTokenScopes": [
+			{
+				"language": "mumps",
+				"scopes": {
+					"global": [
+						"variable.other.constant"
+					],
+					"local": [
+						"variable.language.local"
+					],
+					"entryref": [
+						"entity.name.type.class"
+					],
+					"number": [
+						"constant.numeric"
+					],
+					"ifunction": [
+						"support.function.mumps"
+					],
+					"exfunction": [
+						"support.variable.property"
+					],
+					"operator": [
+						"keyword.operator"
+					],
+					"string": [
+						"string.quoted.double"
+					],
+					"sysvariable": [
+						"variable.language.local"
+					],
+					"keyword": [
+						"keyword.control"
+					],
+					"nonMfunction": [
+						"support.function.user"
+					],
+					"comment": [
+						"comment.line.mumps"
+					]
+				}
 			}
 		]
 	}
