Fixed syntax-detection of $&-functions

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "mumps-debug",
 	"displayName": "Mumps Language-Pack",
-	"version": "0.8.2",
+	"version": "0.8.3",
 	"publisher": "jewuma",
 	"description": "Debugger for Mumps (M) , GT.M, YottaDB",
 	"author": {
@@ -64,7 +64,8 @@
 		"onLanguage:mumps"
 	],
 	"contributes": {
-		"commands": [{
+		"commands": [
+			{
 				"command": "mumps.toggleExpandedCommands",
 				"title": "Toggles between Short- and Longversion of M Commands"
 			},
@@ -73,63 +74,52 @@
 				"title": "Creates comment for M subroutine"
 			}
 		],
-		"debuggers": [{
-			"type": "mumps",
-			"label": "Mumps Debugger",
-			"program": "./dist/extension",
-			"runtime": "node",
-			"languages": [
-				"mumps"
-			],
-			"configurationAttributes": {
-				"launch": {
-					"required": [
-						"program",
-						"hostname",
-						"localRoutinesPath"
-					],
-					"properties": {
-						"program": {
-							"type": "string",
-							"description": "Absolute path to a text file.",
-							"default": "${workspaceFolder}/${command:mumps.getEntryRef}"
-						},
-						"stopOnEntry": {
-							"type": "boolean",
-							"description": "Automatically stop after launch.",
-							"default": true
-						},
-						"hostname": {
-							"type": "string",
-							"description": "The Host which runs MDEBUG",
-							"default": "localhost"
-						},
-						"localRoutinesPath": {
-							"type": "string",
-							"description": "The Path to map .m Files to local Files"
-						},
-						"port": {
-							"type": "number",
-							"description": "The Communication-Port to MDEBUG",
-							"default": 9000
+		"debuggers": [
+			{
+				"type": "mumps",
+				"label": "Mumps Debugger",
+				"program": "./dist/extension",
+				"runtime": "node",
+				"languages": [
+					"mumps"
+				],
+				"configurationAttributes": {
+					"launch": {
+						"required": [
+							"program",
+							"hostname",
+							"localRoutinesPath"
+						],
+						"properties": {
+							"program": {
+								"type": "string",
+								"description": "Absolute path to a text file.",
+								"default": "${workspaceFolder}/${command:mumps.getEntryRef}"
+							},
+							"stopOnEntry": {
+								"type": "boolean",
+								"description": "Automatically stop after launch.",
+								"default": true
+							},
+							"hostname": {
+								"type": "string",
+								"description": "The Host which runs MDEBUG",
+								"default": "localhost"
+							},
+							"localRoutinesPath": {
+								"type": "string",
+								"description": "The Path to map .m Files to local Files"
+							},
+							"port": {
+								"type": "number",
+								"description": "The Communication-Port to MDEBUG",
+								"default": 9000
+							}
 						}
 					}
-				}
-			},
-			"initialConfigurations": [{
-				"type": "mumps",
-				"request": "launch",
-				"name": "Active File",
-				"program": "${file}",
-				"hostname": "localhost",
-				"port": 9000,
-				"localRoutinesPath": "y:\\",
-				"stopOnEntry": true
-			}],
-			"configurationSnippets": [{
-					"label": "Mumps Debug: Launch",
-					"description": "Launch and debug active File",
-					"body": {
+				},
+				"initialConfigurations": [
+					{
 						"type": "mumps",
 						"request": "launch",
 						"name": "Active File",
@@ -139,43 +129,64 @@
 						"localRoutinesPath": "y:\\",
 						"stopOnEntry": true
 					}
-				},
-				{
-					"label": "Mumps Debug: Launch",
-					"description": "Start at individual Entry-Ref.",
-					"body": {
-						"type": "mumps",
-						"request": "launch",
-						"name": "Ask for Entryref",
-						"program": "${command:AskForProgramName}",
-						"stopOnEntry": true
+				],
+				"configurationSnippets": [
+					{
+						"label": "Mumps Debug: Launch",
+						"description": "Launch and debug active File",
+						"body": {
+							"type": "mumps",
+							"request": "launch",
+							"name": "Active File",
+							"program": "${file}",
+							"hostname": "localhost",
+							"port": 9000,
+							"localRoutinesPath": "y:\\",
+							"stopOnEntry": true
+						}
+					},
+					{
+						"label": "Mumps Debug: Launch",
+						"description": "Start at individual Entry-Ref.",
+						"body": {
+							"type": "mumps",
+							"request": "launch",
+							"name": "Ask for Entryref",
+							"program": "${command:AskForProgramName}",
+							"stopOnEntry": true
+						}
 					}
-				}
-			]
-		}],
+				]
+			}
+		],
 		"variables": {
 			"AskForProgramName": "extension.mumps-debug.getProgramName"
 		},
-		"languages": [{
-			"id": "mumps",
-			"aliases": [
-				"MUMPS",
-				"mumps"
-			],
-			"extensions": [
-				".int",
-				".m",
-				".mps",
-				".zwr"
-			],
-			"configuration": "./language-configuration.json"
-		}],
-		"grammars": [{
-			"language": "mumps",
-			"scopeName": "source.mumps",
-			"path": "./syntaxes/mumps.tmLanguage"
-		}],
-		"keybindings": [{
+		"languages": [
+			{
+				"id": "mumps",
+				"aliases": [
+					"MUMPS",
+					"mumps"
+				],
+				"extensions": [
+					".int",
+					".m",
+					".mps",
+					".zwr"
+				],
+				"configuration": "./language-configuration.json"
+			}
+		],
+		"grammars": [
+			{
+				"language": "mumps",
+				"scopeName": "source.mumps",
+				"path": "./syntaxes/mumps.tmLanguage"
+			}
+		],
+		"keybindings": [
+			{
 				"command": "mumps.documentFunction",
 				"key": "ctrl+d",
 				"when": "editorLangId == mumps"
@@ -202,49 +213,53 @@
 				"editor.formatOnSave": true
 			}
 		},
-		"breakpoints": [{
-			"language": "mumps"
-		}],
-		"semanticTokenScopes": [{
-			"language": "mumps",
-			"scopes": {
-				"global": [
-					"variable.other.constant"
-				],
-				"local": [
-					"variable.language.local"
-				],
-				"entryref": [
-					"entity.name.type.class"
-				],
-				"number": [
-					"constant.numeric"
-				],
-				"ifunction": [
-					"support.function.mumps"
-				],
-				"exfunction": [
-					"support.variable.property"
-				],
-				"operator": [
-					"keyword.operator"
-				],
-				"string": [
-					"string.quoted.double"
-				],
-				"sysvariable": [
-					"variable.language.local"
-				],
-				"keyword": [
-					"keyword.control"
-				],
-				"nonMfunction": [
-					"support.function.user"
-				],
-				"comment": [
-					"comment.line.mumps"
-				]
+		"breakpoints": [
+			{
+				"language": "mumps"
 			}
-		}]
+		],
+		"semanticTokenScopes": [
+			{
+				"language": "mumps",
+				"scopes": {
+					"global": [
+						"variable.other.constant"
+					],
+					"local": [
+						"variable.language.local"
+					],
+					"entryref": [
+						"entity.name.type.class"
+					],
+					"number": [
+						"constant.numeric"
+					],
+					"ifunction": [
+						"support.function.mumps"
+					],
+					"exfunction": [
+						"support.variable.property"
+					],
+					"operator": [
+						"keyword.operator"
+					],
+					"string": [
+						"string.quoted.double"
+					],
+					"sysvariable": [
+						"variable.language.local"
+					],
+					"keyword": [
+						"keyword.control"
+					],
+					"nonMfunction": [
+						"support.function.user"
+					],
+					"comment": [
+						"comment.line.mumps"
+					]
+				}
+			}
+		]
 	}
 }
