--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
 		"webpack": "^5.64.0",
 		"webpack-cli": "^4.9.1"
 	},
-	"main": "./dist/extension",
+	"main": "./out/extension",
 	"activationEvents": [
 		"onLanguage:mumps"
 	],
@@ -76,7 +76,7 @@
 		"debuggers": [{
 			"type": "mumps",
 			"label": "Mumps Debugger",
-			"program": "./dist/extension",
+			"program": "./out/extension",
 			"runtime": "node",
 			"languages": [
 				"mumps"
