--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "mumps-debug",
 	"displayName": "Mumps Language-Pack",
-	"version": "1.1.3",
+	"version": "1.1.4",
 	"publisher": "jewuma",
 	"description": "Debugger for Mumps (M) , GT.M, YottaDB",
 	"author": {
@@ -55,7 +55,7 @@
 		"emcellent": "0.0.5",
 		"tslint": "5.18.0",
 		"typescript": "^4.4.4",
-		"vsce": "^2.3.0",
+		"@vscode/vsce": "^2.3.0",
 		"webpack": "^5.64.0",
 		"webpack-cli": "^4.9.1"
 	},
