--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -12,6 +12,6 @@
 		"preserveConstEnums": true,
 		"strictNullChecks": true,
 		"noUnusedParameters": false,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
 	}
 }
